Fix for collapsing background in Percy.

--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -46,141 +46,131 @@ footer.spi {
   }
 }
 
-header.spi .inner {
-  &.branding_and_menu {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-
-    @media screen and (max-width: $mobile-breakpoint) {
-      grid-template-columns: 1fr;
-
-      a {
-        margin: 0 auto;
-      }
-    }
-
-    h1 {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      font-size: 23px;
-      color: inherit;
-
-      img {
-        margin-right: 10px;
-        max-width: 64px;
-      }
-    }
-
-    .menu {
-      display: flex;
-      align-items: center;
-      justify-self: end;
-
-      @media screen and (max-width: $mobile-breakpoint) {
-        justify-self: center;
-      }
-
-      a {
-        padding: 3px;
-        font-size: 15px;
-        font-weight: 600;
-      }
-
-      ul {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-
-        li {
-          margin: 0 3px;
-          list-style: none;
-        }
-      }
-    }
-  }
-
-  &.breadcrumbs {
-    ul {
-      display: flex;
+header.spi {
+  .inner {
+    &.branding_and_menu {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: 20px;
-      padding: 0;
-      list-style: none;
 
       @media screen and (max-width: $mobile-breakpoint) {
-        flex-direction: column;
-        gap: 0;
-      }
-
-      li {
-        position: relative;
+        grid-template-columns: 1fr;
 
         a {
-          padding: 5px 0;
-          width: 100%;
-          height: 100%;
+          margin: 0 auto;
+        }
+      }
+
+      h1 {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 23px;
+        color: inherit;
+
+        img {
+          margin-right: 10px;
+          max-width: 64px;
+        }
+      }
+
+      .menu {
+        display: flex;
+        align-items: center;
+        justify-self: end;
+
+        @media screen and (max-width: $mobile-breakpoint) {
+          justify-self: center;
         }
 
-        &:not(:first-child) {
-          &::before {
-            content: '';
-            position: absolute;
-            background-color: var(--breadcrumb-header);
-            top: calc(50% - 6px);
-            left: -16px;
-            width: 12px;
-            height: 12px;
-            clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 100%, 50% 50%, 25% 0);
+        a {
+          padding: 3px;
+          font-size: 15px;
+          font-weight: 600;
+        }
+
+        ul {
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+
+          li {
+            margin: 0 3px;
+            list-style: none;
+          }
+        }
+      }
+    }
+
+    &.breadcrumbs {
+      ul {
+        display: flex;
+        gap: 20px;
+        padding: 0;
+        list-style: none;
+
+        @media screen and (max-width: $mobile-breakpoint) {
+          flex-direction: column;
+          gap: 0;
+        }
+
+        li {
+          position: relative;
+
+          a {
+            padding: 5px 0;
+            width: 100%;
+            height: 100%;
           }
 
-          @media screen and (max-width: $mobile-breakpoint) {
-            margin-left: 20px;
+          &:not(:first-child) {
+            &::before {
+              content: '';
+              position: absolute;
+              background-color: var(--breadcrumb-header);
+              top: calc(50% - 6px);
+              left: -16px;
+              width: 12px;
+              height: 12px;
+              clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 100%, 50% 50%, 25% 0);
+            }
+
+            @media screen and (max-width: $mobile-breakpoint) {
+              margin-left: 20px;
+            }
           }
+        }
+      }
+    }
+
+    &.targets {
+      ul {
+        display: flex;
+        gap: 20px;
+        padding: 0;
+        list-style: none;
+
+        @media screen and (max-width: $mobile-breakpoint) {
+          flex-direction: column;
+          gap: 0;
+        }
+
+        li:first-of-type {
+          font-weight: bold;
         }
       }
     }
   }
 
-  &.targets {
-    position: relative;
+  .targets_wrap {
+    background-color: rgba(255, 255, 255, 0.15);
 
-    &::before {
-      content: '';
-      background-color: rgba(255, 255, 255, 0.15);
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      width: 100vw;
-      margin-left: 50%;
-      transform: translateX(-50%);
-      z-index: -1;
-
-      @media (prefers-color-scheme: dark) {
-        background-color: rgba(0, 0, 0, 0.25);
-      }
-    }
-
-    ul {
-      display: flex;
-      gap: 20px;
-      padding: 0;
-      list-style: none;
-
-      @media screen and (max-width: $mobile-breakpoint) {
-        flex-direction: column;
-        gap: 0;
-      }
-
-      li:first-of-type {
-        font-weight: bold;
-      }
+    @media (prefers-color-scheme: dark) {
+      background-color: rgba(0, 0, 0, 0.25);
     }
   }
 }
